--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,3 @@
 URL=https://rahulshettyacademy.com/dropdownsPractise/
 assigmentURL1=https://rahulshettyacademy.com/AutomationPractice/
+assigmentURL2=https://rahulshettyacademy.com/angularpractice/
